Fix cropped select list

--- a/Arkitektum.Orden/ClientApp/scss/partials/_list-group.scss
+++ b/Arkitektum.Orden/ClientApp/scss/partials/_list-group.scss
@@ -3,7 +3,7 @@
     width: 100%;
     .filter-results {
         &.active {
-            width: calc(100% - 2.5rem);
+            width: calc(100% - 4.5rem);
             position: absolute;
             z-index: 2;
         }
